rework many things